--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="apple-touch-icon-precomposed" href="//100yen.co.uk/icons/apple-touch-icon.png">
     <link rel="shortcut icon" href="/icons/favicon.ico">
-    <link rel="stylesheet" href="/assets/css/master.css">
+    <link rel="stylesheet" href="/public/css/master.css">
 
     <meta http-equiv="content-style-type" content="text/css">
     <meta http-equiv="content-script-type" content="text/javascript">
@@ -62,7 +62,7 @@
 
     <canvas class="bg-canvas" height="100%" id="dots" width="100%"></canvas>
 
-    <script src="/assets/js/master.js"></script>
+    <script src="/public/js/master.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
