Added DNS prefetch info

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
     <title>100yen — Website design and development for cool people by Jonic Linley</title>
 
-    <script src="//use.typekit.net/tgw1nyv.js"></script>
-    <script> try { Typekit.load(); } catch (e) {} </script>
-
     <link rel="apple-touch-icon-precomposed" href="//100yen.co.uk/icons/apple-touch-icon.png">
     <link rel="shortcut icon" href="/icons/favicon.ico">
     <link rel="stylesheet" href="/public/css/master.css">
+    <link rel="dns-prefetch" href="//google-analytics.com">
+    <link rel="dns-prefetch" href="//use.typekit.net">
+
+    <script src="//use.typekit.net/tgw1nyv.js"></script>
+    <script> try { Typekit.load(); } catch (e) {} </script>
 
     <meta http-equiv="content-style-type" content="text/css">
     <meta http-equiv="content-script-type" content="text/javascript">
