Added Twitter cards stuff

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <meta property="og:title" content="100yen">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://100yen.co.uk/">
+    <meta name="twitter:card"    content="summary">
+    <meta name="twitter:site"    content="@Jonic">
+    <meta name="twitter:creator" content="@Jonic">
   </head>
 
   <body>
