--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <meta property="og:site_name" content="100yen">
     <meta property="og:title" content="100yen">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://100yen.co.uk/">
+    <meta property="og:url" content="https://100yen.co.uk/">
     <meta name="twitter:card"    content="summary">
     <meta name="twitter:site"    content="@Jonic">
     <meta name="twitter:creator" content="@Jonic">
   </head>
 
-  <body>
+  <body data-host="zeit">
     <header class="site-header" role="banner">
       <h1 class="site-logo">
         <svg viewbox="0 0 1010 202">
